apps/base/media-ingest/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr-prod-media-deployment
  namespace: media-ingest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        fsGroup: 10000
        runAsGroup: 10000
        runAsNonRoot: true
        runAsUser: 10000
        seccompProfile:
          type: RuntimeDefault
        readOnlyRootFilesystem: true
      automountServiceAccountToken: false
      containers:
      - securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        image: ghcr.io/csbdc/prowlarr:main
        name: prowlarr
        livenessProbe:
          httpGet:
            path: /ping
            port: 9696
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 9696
          initialDelaySeconds: 20
          periodSeconds: 3
        ports:
          - containerPort: 9696
            name: http
            protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 250m
            memory: 250Mi
        volumeMounts:
        - name: data
          mountPath: /config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: prowlarr-prod-media-pvc
