apps/base/media-ingest/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-prod-media-svc
  namespace: media-ingest
spec:
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: http
      name: http
      protocol: TCP
